[gd_scene load_steps=4 format=2]

[ext_resource path="res://styles/menu_button_style.tres" type="StyleBox" id=1]
[ext_resource path="res://fonts/font.tres" type="DynamicFont" id=2]
[ext_resource path="res://scenes/MainMenu.gd" type="Script" id=3]

[node name="MainMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.501961 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 490.0
margin_top = 193.0
margin_right = 790.0
margin_bottom = 527.0
rect_min_size = Vector2( 300, 0 )
custom_constants/separation = 14

[node name="Back" type="Button" parent="CenterContainer/VBoxContainer"]
margin_right = 300.0
margin_bottom = 73.0
custom_fonts/font = ExtResource( 2 )
custom_styles/hover = ExtResource( 1 )
custom_styles/pressed = ExtResource( 1 )
custom_styles/focus = ExtResource( 1 )
custom_styles/normal = ExtResource( 1 )
text = "Resume"

[node name="New" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 87.0
margin_right = 300.0
margin_bottom = 160.0
custom_fonts/font = ExtResource( 2 )
custom_styles/hover = ExtResource( 1 )
custom_styles/pressed = ExtResource( 1 )
custom_styles/focus = ExtResource( 1 )
custom_styles/normal = ExtResource( 1 )
text = "New level"

[node name="Music" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 174.0
margin_right = 300.0
margin_bottom = 247.0
custom_fonts/font = ExtResource( 2 )
custom_styles/hover = ExtResource( 1 )
custom_styles/pressed = ExtResource( 1 )
custom_styles/focus = ExtResource( 1 )
custom_styles/normal = ExtResource( 1 )
text = "Music: On"

[node name="Quit" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 261.0
margin_right = 300.0
margin_bottom = 334.0
custom_fonts/font = ExtResource( 2 )
custom_styles/hover = ExtResource( 1 )
custom_styles/pressed = ExtResource( 1 )
custom_styles/focus = ExtResource( 1 )
custom_styles/normal = ExtResource( 1 )
text = "Quit"

[connection signal="pressed" from="CenterContainer/VBoxContainer/Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/New" to="." method="_on_New_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Music" to="." method="_on_Music_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
